# rcmate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
config/: config.toml
src/: app.rs  config.rs  event.rs  main.rs  rclone_request.rs  tui.rs  views.rs
src/views/: about.rs  bisync_options.rs  edit.rs  main.rs  progress.rs
