[package]
name = "rcmate"
version = "0.1.6"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["iocast"]

[[bin]]
name = "rcmate"
path = "src/main.rs"

[dependencies]
strip-ansi-escapes = "0.2.1"
textwrap = "0.16"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.8"
chrono = { version = "0.4.42", features = ["std"] }
home = "0.5.12"
crossterm = { version = "0.29.0", features = ["event-stream", "derive-more"] }
ratatui = "0.30.0"
tui-popup = "0.7.6"
color-eyre = "0.6.5"
futures = "0.3.31"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
    "io-util",
    "time",
] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
